--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ remote_theme: BuildingAtom/project-pages@v1.2-theme
 
 # Metadata and SEO-helper stuff
 # This title here should correspond to your base site or as a shared title
-title: Safe Planning for Articulated Robots Using Reachability-based Obstacle Avoidance With Spheres
+title: Provably-Safe, Real-time Planning & Control For Bipedal Robots Using Reachability-Based Trajectory Design
 baseurl: "/sparrows" # the subpath of your site, e.g. /blog
 url: "https://roahmlab.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # This sets window title, not the title you read on the page
@@ -35,12 +35,12 @@ footer:
   # connections-pre: # This prefixes the connections section at the botom.
   # connections-post: Socials
   connections:
-    github: https://github.com/roahmlab/sparrows
+    github: https://cfather.github.io/DigitSafePlanning/
     arxiv: https://arxiv.org/abs/2402.08857
   # related-sites:
   #   sites:
   #     - text: Code
-  #       href: https://github.com/roahmlab/sparrows
+  #       href: https://cfather.github.io/DigitSafePlanning/
   #       icon: bi-github
   #       icon-library: bootstrap-icons
 
