--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ remote_theme: BuildingAtom/project-pages@v1.2-theme
 # Metadata and SEO-helper stuff
 # This title here should correspond to your base site or as a shared title
 title: Provably-Safe, Real-time Planning & Control For Bipedal Robots Using Reachability-Based Trajectory Design
-baseurl: "/sparrows" # the subpath of your site, e.g. /blog
-url: "https://roahmlab.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/DigitSafePlanning" # the subpath of your site, e.g. /blog
+url: "https://cfather.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # This sets window title, not the title you read on the page
 title-format: page-site # options are page-site, page, site.
 lang: en
